--- a/styles/index.css
+++ b/styles/index.css
@@ -148,13 +148,14 @@ html,
 body {
   width: 100%;
   min-height: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Montserrat", sans-serif;
   min-width: 320px;
   background-color: #fafafa;
-  overflow-x: hidden;
 }
 
 .page {
